Adds the new CZML sample files

--- a/public/agi/test/czml/index.vwf.yaml
+++ b/public/agi/test/czml/index.vwf.yaml
@@ -30,4 +30,4 @@ children:
   scenario:
     extends: http://vwf.example.com/cesium/node3.vwf 
     type: model/vnd.cesium.czml+xml
-    source: lotsOfSensors.czml
+    source: simple.czml
