Disallows pick events when the mouse is not over canvas
Also removes the double negative with inputs
ands removes the ‘experimental’ notation

--- a/public/bzflag/index.vwf.config.yaml
+++ b/public/bzflag/index.vwf.config.yaml
@@ -15,6 +15,8 @@
 model:
   vwf/model/threejs:
 view:
-  vwf/view/threejs: { application-root: "#vwf-root", experimental-disable-inputs: true }
+  vwf/view/threejs: 
+  	application-root: "#vwf-root"
+  	enable-inputs: false
 configuration:
   preserve-script-closures: true
