HACK: Modified videomanager to work with our Pink Flag skin.

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -4,8 +4,8 @@ properties:
   url:
   posterImageUrl:
   loop: false
-  containerDivId: "videoContainer"
-  playerDivId: "videoScreen"
+  containerDivId: "jp_container_1"
+  playerDivId: "jquery_jplayer_1"
 methods:
   play:
   pause:
