Removes the hardcoded camera ID

--- a/support/proxy/vwf.example.com/scene.vwf.yaml
+++ b/support/proxy/vwf.example.com/scene.vwf.yaml
@@ -52,7 +52,7 @@ properties:
           }
         }
       } //@ sourceURL=scene.set.activeCamera.vwf
-    value: "http-vwf-example-com-camera-vwf-camera"
+    value: ""
 
   ## Ambient color
   ## 
