--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -6,6 +6,7 @@ properties:
   loop: false
   containerDivId: "videoContainer"
   playerDivId: "videoScreen"
+  z_index:
 methods:
   play:
   pause:
