Now we call show() and hide() thru the driver.

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -6,8 +6,12 @@ properties:
   loop: false
   containerDivId: "videoContainer"
   playerDivId: "videoScreen"
-  # z_index: 103
+  containerDivSize: 
+  playerDivSize:
+  foo: 
 methods:
   play:
   pause:
   stop: 
+  show:
+  hide: 
