Corrects the events tag

--- a/support/proxy/vwf.example.com/node3/animation.vwf.yaml
+++ b/support/proxy/vwf.example.com/node3/animation.vwf.yaml
@@ -416,5 +416,5 @@ methods:
       }
       this.transformTo( stopTransform, duration ); //@ sourceURL=node3.animation.worldTransformTo.vwf
 
-event: 
+events: 
   changingTransformFromView:
