--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -7,7 +7,7 @@ properties:
   containerDivId: "videoContainer"
   playerDivId: "videoScreen"
   containerDivSize: 
-  playerDivSize:
+  playerDivSize: 
   foo: 
 methods:
   play:
@@ -15,3 +15,4 @@ methods:
   stop: 
   show:
   hide: 
+  setEndedCallback: 
