Added event rather than function that sets callback.

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -8,11 +8,11 @@ properties:
   playerDivId: "videoScreen"
   containerDivSize: 
   playerDivSize: 
-  foo: 
 methods:
-  play:
+  play: 
   pause:
   stop: 
   show:
   hide: 
-  setEndedCallback: 
+events:
+  videoEnded: 
