Now we can set the player and container size dynamically.

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -6,13 +6,14 @@ properties:
   loop: false
   containerDivId: "videoContainer"
   playerDivId: "videoScreen"
-  containerDivSize: 
-  playerDivSize: 
+  containerSize: [ 1024, 768 ]
+  playerSize: [1024, 768]
 methods:
   play: 
   pause:
   stop: 
   show:
   hide: 
+  clearMedia: 
 events:
   videoEnded: 
