Got the new videoManager dropped in. Doesn't break TDG.

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -6,8 +6,14 @@ properties:
   loop: false
   containerDivId: "videoContainer"
   playerDivId: "videoScreen"
+  containerSize: [ 1024, 768 ]
+  playerSize: [1024, 768]
 methods:
-  play:
+  play: 
   pause:
-  stop:
-  
+  stop: 
+  show:
+  hide: 
+  clearMedia: 
+events:
+  videoEnded: 
