--- a/support/proxy/vwf.example.com/HUD/element.vwf.yaml
+++ b/support/proxy/vwf.example.com/HUD/element.vwf.yaml
@@ -15,4 +15,10 @@ properties:
 methods:
   draw:
 events:
+  onClick:
+  onMouseDown:
+  onMouseUp:
+  onMouseMove:
+  onMouseOver:
+  onMouseOut:
 scripts:
