Added support for pre/post draw functions

--- a/support/proxy/vwf.example.com/HUD/overlay.vwf.yaml
+++ b/support/proxy/vwf.example.com/HUD/overlay.vwf.yaml
@@ -2,5 +2,9 @@ extends: http://vwf.example.com/node.vwf
 properties:
   visible: true
 methods:
+  elementPreDraw:
+  elementPostDraw:
+  globalPreDraw:
+  globalPostDraw:
 events:
 scripts:
