Div injection now works (I think?)

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -4,8 +4,10 @@ properties:
   url:
   posterImageUrl:
   loop: false
-  containerDivId: "videoContainer"
+  containerDivId: "jp_container_1"
   playerDivId: "videoScreen"
+  # containerDivId: "videoContainer"
+  # playerDivId: "videoScreen"
   containerSize: [ 1024, 768 ]
   playerSize: [1024, 768]
 methods:
