Changed default names of jPlayer div container and player container BACK so that TDG doesn't break!

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -4,10 +4,8 @@ properties:
   url:
   posterImageUrl:
   loop: false
-  containerDivId: "jp_container_1"
+  containerDivId: "videoContainer"
   playerDivId: "videoScreen"
-  # containerDivId: "videoContainer"
-  # playerDivId: "videoScreen"
   containerSize: [ 1024, 768 ]
   playerSize: [1024, 768]
 methods:
