Cleaned up the video URL. Now we are ready to test if it's a string or a list.

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -2,12 +2,11 @@
 extends: http://vwf.example.com/node.vwf
 properties:
   url:
+  altUrls:
   posterImageUrl:
   loop: false
   containerDivId: "jp_container_1"
   playerDivId: "videoScreen"
-  # containerDivId: "videoContainer"
-  # playerDivId: "videoScreen"
   containerSize: [ 1024, 768 ]
   playerSize: [ 1024, 768 ]
 methods:
