Add blockly_interfaceVisible property

--- a/support/proxy/vwf.example.com/blockly/manager.vwf.yaml
+++ b/support/proxy/vwf.example.com/blockly/manager.vwf.yaml
@@ -24,6 +24,7 @@ properties:
   blockly_toolbox:
   blockly_defaultXml:
   blockly_autoClose:
+  blockly_interfaceVisible:
 methods:
   startAllExecution:
   stopAllExecution:
