Use property settings to attach mouse and touch events.
For each kinetic object class, add properties of supportMouseEvents and supportTouchEvents.
If these properties are true, then when the object is created and initialized, the mouse and/or touch events will be added.

--- a/support/proxy/vwf.example.com/kinetic/container.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/container.vwf.yaml
@@ -4,6 +4,8 @@
 extends: http://vwf.example.com/kinetic/node.vwf
 properties: 
   clipFunc:
+  supportMouseEvents: false
+  supportTouchEvents: false
 method:
   deleteChildNode:
 scripts:
