--- a/support/proxy/vwf.example.com/kinetic/group.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/group.vwf.yaml
@@ -2,3 +2,6 @@
 
 --- 
 extends: http://vwf.example.com/kinetic/container.vwf
+properties:
+  supportMouseEvents: false
+  supportTouchEvents: false
