--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -31,6 +31,8 @@ properties:
   absoluteOpacity:
   absoluteZIndex:
   uniqueInView:
+  supportMouseEvents:
+  supportTouchEvents:
   dragProperty: "position"
 methods:
   toggleVisibility:
