--- a/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
@@ -1,6 +1,8 @@
 --- 
 extends: http://vwf.example.com/kinetic/group.vwf
 properties: 
+  supportMouseEvents: true
+  supportTouchEvents: true
   
   mapPosition:
     set: |
