Propagate the status of attached mouse and touch events in kinetic nodes.
Add a property to the kinetic node, set it to false in the model and update it in the view when the events are attached.

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -33,6 +33,8 @@ properties:
   uniqueInView:
   supportMouseEvents:
   supportTouchEvents:
+  hasMouseEvents: false
+  hasTouchEvents: false
   dragProperty: "position"
 methods:
   toggleVisibility:
