Now we can pre-load the correct cutscenes in the scenario1* series of scenarios.

--- a/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
+++ b/support/proxy/vwf.example.com/jplayer/videoManager.vwf.yaml
@@ -9,8 +9,8 @@ properties:
   playerDivId: "videoScreen"
   containerSize: [ 1024, 768 ]
   playerSize: [ 1024, 768 ]
+  preload: "auto"
 methods:
-  load:
   play: 
   pause:
   stop: 
