Mouse and touch event addition only when needed per class.
Turn off listening by default - object will not listen to mouse and touch events until listening is turned on.
Register when mouse and touch events have been added to the object.

Also, mil-sym symbols support roles in creation requests.

--- a/support/proxy/vwf.example.com/kinetic/baseLayer.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/baseLayer.vwf.yaml
@@ -4,3 +4,7 @@
 extends: http://vwf.example.com/kinetic/container.vwf
 properties:
   clearBeforeDraw:
+  supportMouseEvents: false
+  supportTouchEvents: false
+  hitGraphEnabled: false
+  listening: false
