--- a/support/proxy/vwf.example.com/kinetic/layer.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/layer.vwf.yaml
@@ -6,3 +6,5 @@ properties:
   clearBeforeDraw:
   supportMouseEvents: false
   supportTouchEvents: false
+  hitGraphEnabled: false
+  listening: false
