Rebased kinetic-view on development.  Some bug fixes implemented to correct referencing node properly.

--- a/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
@@ -14,7 +14,7 @@ methods:
   clientLeave:
   setUpPrivate:
   setClientUIState:
-  #isValid:
+  isValid:
   getStageRelativePoint:
 events:
   pointerDown:
