Unit symbols can be dragged and reflect on each client.  Visibility/listening/opacity unique-in-view values tested out ok.
Still some issues to fix:
1. Late joiners don't get any graphics (lines or shapes), but do get unit symbols.
2. Unit symbol jumps back to creation position when activating threat area.
3. Sometimes dragging map or unit symbols can be a little jerky (especially on client that did not originate session).

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -31,6 +31,8 @@ properties:
   absoluteTransform:
   absoluteOpacity:
   absoluteZIndex:
+  modelX:
+  modelY:
   supportMouseEvents:
   supportTouchEvents:
   hasMouseEvents: false
