Add ability to use a 2d canvas as a texture in shader materials

--- a/support/proxy/vwf.example.com/shaderMaterial.vwf.yaml
+++ b/support/proxy/vwf.example.com/shaderMaterial.vwf.yaml
@@ -35,3 +35,6 @@ methods:
       var defines = this.defines;
       defines[ name ] = value;
       this.defines = defines;
+  updateTexture:
+    parameters:
+      - textureName
