Fix error where drawingGroups (inserted images, text and arrows) were not responding to erase.

--- a/support/proxy/vwf.example.com/kinetic/drawingGroup.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawingGroup.vwf.yaml
@@ -3,5 +3,5 @@
 --- 
 extends: http://vwf.example.com/kinetic/group.vwf
 properties:
-  supportMouseEvents: false
-  supportTouchEvents: false
+  supportMouseEvents: true
+  supportTouchEvents: true
