--- a/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
@@ -6,15 +6,17 @@ properties:
   
   mapPosition:
     set: |
+      debugger;
       if ( value !== undefined ) {
+        //this.mapPosition = { "x": value.x, "y": value.y };
         this.mapPosition = value;
         if ( this.icon && this.icon.symbolCenter ) {
           this.position = {
-            "x": this.mapPosition.x - this.icon.symbolCenter.x,
-            "y": this.mapPosition.y - this.icon.symbolCenter.y
+            "x": ( this.mapPosition.absolute ? this.mapPosition.x : this.mapPosition.x - this.icon.symbolCenter.x ),
+            "y": ( this.mapPosition.absolute ? this.mapPosition.y : this.mapPosition.y - this.icon.symbolCenter.y )
           };
         } else {
-          this.position = value;
+          this.position = { "x": value.x, "y": value.y };
         } 
       }
     value: { "x": 0, "y": 0 }
