Allow entire HUD to be disabled

--- a/support/proxy/vwf.example.com/hud/overlay.vwf.yaml
+++ b/support/proxy/vwf.example.com/hud/overlay.vwf.yaml
@@ -1,6 +1,7 @@
 extends: http://vwf.example.com/node.vwf
 properties:
   visible: true
+  enabled: true
 methods:
   elementPreDraw:
   elementPostDraw:
