--- a/support/proxy/vwf.example.com/scene.vwf.yaml
+++ b/support/proxy/vwf.example.com/scene.vwf.yaml
@@ -155,6 +155,13 @@ properties:
       }
     value: "PCFSoft"
 
+  ## Set `enableRenderer` to `false` to disable rendering for this scene. Defaults to `true`.
+  ## 
+  ## @name scene.vwf#enableRenderer
+  ## @property
+
+  enableRenderer: true
+
 methods:
   initializeActiveCamera:
   getActiveCameraComp:
