Add body to add point method

--- a/support/proxy/vwf.example.com/graphtool/graphpointline.vwf.yaml
+++ b/support/proxy/vwf.example.com/graphtool/graphpointline.vwf.yaml
@@ -12,3 +12,7 @@ methods:
       - x
       - y
       - z
+    body: |
+      var points = this.points.slice();
+      points.push( [ x, y, z ] );
+      this.points = points;
