Add looping property

--- a/support/proxy/vwf.example.com/graphtool/graphpointline.vwf.yaml
+++ b/support/proxy/vwf.example.com/graphtool/graphpointline.vwf.yaml
@@ -5,6 +5,7 @@ properties:
   color: undefined
   opacity: undefined
   lineThickness: undefined
+  isLoop: undefined
   renderTop: undefined
 methods:
   addPoint:
