--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "async": "0.2.x",
     "body-parser": "^1.14.1",
+    "bootstrap": "^3.3.5",
     "config": "^1.16.0",
     "cookie-parser": "^1.4.0",
     "cookie-session": "^2.0.0-alpha.1",
@@ -28,6 +29,8 @@
     "flash": "^1.1.0",
     "formidable": "1.0.x",
     "fs-extra": "0.8.x",
+    "jade": "^1.11.0",
+    "jquery": "^2.1.4",
     "js-yaml": "2.1.x",
     "mime": "1.2.x",
     "optimist": "0.6.x",
