First attempt at moving drawing functionality from model to view.
Twofold: draw live with the user so he sees what he's doing and reduce network traffic.

--- a/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/drawing.vwf.yaml
@@ -27,5 +27,6 @@ events:
   textCreated:
   imageCreated:
   findChild:
+  privateDrawingUpdated:
 scripts:
 - source: "http://vwf.example.com/kinetic/drawing.js"
