--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.0",
     "cookie-session": "^2.0.0-alpha.1",
     "crypto": "0.0.x",
+    "dateformat": "^1.0.11",
     "express": "^4.13.3",
     "flash": "^1.1.0",
     "formidable": "1.0.x",
