VWF: Specify the license using the correct SPDX identifier
Use the format described at
https://docs.npmjs.com/files/package.json#license.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,5 @@
     "mocha": "x.x.x",
     "should": "x.x.x"
   },
-  "license": {
-    "type": "Apache",
-    "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-  }
+  "license": "Apache-2.0"
 }
