Add support for line styles, fills. Consolidate filled/unfilled drawing shapes and streamline shapes.
Consolidate circles/rings into a single shape with fill options.
Consolidate rectangles/border rectangles into a single shape with fill options.
Add polygon shape, using free draw with closed=true.
Change arrow from a grouped two-part object to a closed outline rotated to an orientation.
Remove image border object and just set the stroke to do an outline of the image while drawing out.
Support text.

TO DO: Image still doesn't fully work.

--- a/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
@@ -3,6 +3,7 @@ extends: http://vwf.example.com/kinetic/group.vwf
 properties: 
   supportMouseEvents: true
   supportTouchEvents: true
+  index: 8
   
   mapPosition:
     set: |
