Add an `attributes` property to expose all Kinetic attributes

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -39,6 +39,7 @@ properties:
   hasMouseEvents: false
   hasTouchEvents: false
   dragProperty: "position"
+  attributes:
 methods:
   toggleVisibility:
   toggleListening:
