Test fix for pixelRatio on iOS

--- a/support/proxy/vwf.example.com/kinetic/image.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/image.vwf.yaml
@@ -5,7 +5,7 @@ extends: http://vwf.example.com/kinetic/shape.vwf
 properties:
   image:
   crop:
-  scaleOnLoad: false
+  scaleOnLoad: true
 events:
   imageLoaded:
   imageLoadError:
