--- a/support/proxy/vwf.example.com/kinetic/container.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/container.vwf.yaml
@@ -4,8 +4,7 @@
 extends: http://vwf.example.com/kinetic/node.vwf
 properties: 
   clipFunc:
-  supportMouseEvents: false
-  supportTouchEvents: false
+  supportMouseAndTouchEvents: false
 method:
   deleteChildNode:
 scripts:
