--- a/support/proxy/vwf.example.com/kinetic/fastLayer.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/fastLayer.vwf.yaml
@@ -4,7 +4,6 @@
 extends: http://vwf.example.com/kinetic/container.vwf
 properties:
   clearBeforeDraw:
-  supportMouseEvents: false
-  supportTouchEvents: false
+  supportMouseAndTouchEvents: false
   hitGraphEnabled: false
   listening: false
