--- a/support/proxy/vwf.example.com/kinetic/group.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/group.vwf.yaml
@@ -3,5 +3,4 @@
 --- 
 extends: http://vwf.example.com/kinetic/container.vwf
 properties:
-  supportMouseEvents: false
-  supportTouchEvents: false
+  supportMouseAndTouchEvents: false
