--- a/support/proxy/vwf.example.com/kinetic/line.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/line.vwf.yaml
@@ -8,5 +8,4 @@ properties:
   closed: false
   stroke: "#000000"
   strokeWidth: 1
-  supportMouseEvents: true
-  supportTouchEvents: true
+  supportMouseAndTouchEvents: true
