--- a/support/proxy/vwf.example.com/kinetic/stage.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/stage.vwf.yaml
@@ -4,8 +4,7 @@
 extends: http://vwf.example.com/kinetic/container.vwf
 properties:
   container:
-  supportMouseEvents: true
-  supportTouchEvents: true
+  supportMouseAndTouchEvents: true
   enableEvents:
 events:
   pointerDown:
