--- a/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
@@ -1,8 +1,7 @@
 --- 
 extends: http://vwf.example.com/kinetic/group.vwf
 properties: 
-  supportMouseEvents: true
-  supportTouchEvents: true
+  supportMouseAndTouchEvents: true
   index: 8
   zIndex: 8
   
