Remove property from components that inherit the correct value

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -34,7 +34,7 @@ properties:
   absoluteZIndex:
   modelX:
   modelY:
-  supportMouseAndTouchEvents:
+  supportMouseAndTouchEvents: false
   hasMouseAndTouchEvents: false
   dragProperty: "position"
   attributes:
