--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "url": "https://github.com/virtual-world-framework/vwf.git"
   },
   "dependencies": {
-    "crypto": "0.0.x",
-    "socket.io": "0.9.x",
     "async": "0.2.x",
-    "mime": "1.2.x",
+    "crypto": "0.0.x",
+    "formidable": "1.0.x",
+    "fs-extra": "0.8.x",
     "js-yaml": "2.1.x",
+    "mime": "1.2.x",
     "optimist": "0.6.x",
-    "fs-extra": "0.8.x"
+    "socket.io": "0.9.x",
+    "util": "0.10.x"
   },
   "devDependencies": {
     "node-inspector": "x.x.x",
@@ -37,4 +39,3 @@
     "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
   }
 }
-
