--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "js-yaml": "2.1.x",
     "mime": "1.2.x",
     "optimist": "0.6.x",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "socket.io": "0.9.x",
     "util": "0.10.x"
   },
