When a user starts dragging a unit group, pop it up to the top (local view only).

--- a/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
@@ -4,7 +4,8 @@ properties:
   supportMouseAndTouchEvents: true
   index: 8
   zIndex: 8
-  
+  dragToTop: true
+
   mapPosition:
     set: |
       if ( value !== undefined ) {
