Allow individual konva nodes to turn off rotation and scale

--- a/support/proxy/vwf.example.com/kinetic/stage.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/stage.vwf.yaml
@@ -4,6 +4,7 @@
 extends: http://vwf.example.com/kinetic/container.vwf
 properties:
   container:
+  disableScaleAndRotationForSpeed: false
   supportMouseAndTouchEvents: true
   enableEvents:
 events:
