--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-yaml": "2.1.x",
     "lodash": "^3.10.1",
     "mime": "1.2.x",
+    "mkdirp": "^0.5.1",
     "optimist": "0.6.x",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
