--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto": "0.0.x",
     "dateformat": "^1.0.11",
     "express": "^4.13.3",
+    "finalhandler": "^0.4.1",
     "flash": "^1.1.0",
     "formidable": "1.0.x",
     "fs-extra": "0.8.x",
