Default strokeEnabled=false for unitIcon, save strokeEnabled property in the model.
Also, limit tranforms for unitIcon to position only.

--- a/support/proxy/vwf.example.com/mil-sym/unitIcon.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitIcon.vwf.yaml
@@ -25,6 +25,8 @@ properties:
       }
     value: { "x": 16, "y": 16 }
 
+  strokeEnabled: false
+  transformsEnabled: "position"
   zIndex: 20
 
 events:
