--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/virtual-world-framework/vwf.git"
   },
   "dependencies": {
+    "amdefine": "^1.0.0",
     "async": "0.2.x",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
