--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "url": "https://github.com/virtual-world-framework/vwf.git"
   },
   "dependencies": {
-    "crypto": "0.0.x",
-    "socket.io": "0.9.x",
-    "async": "0.2.x",
-    "mime": "1.2.x",
-    "js-yaml": "2.1.x",
+    "crypto": "0.0.3",
+    "socket.io": "1.7.3",
+    "socket.io-client": "^1.7.3",
+    "ws": "~2.1.0",
+    "async": "~2.1.5",
+    "mime": "1.3.4",
+    "js-yaml": "3.8.1",
     "optimist": "0.6.x",
-    "fs-extra": "0.8.x"
+    "fs-extra": "2.0.0"
   },
   "devDependencies": {
-    "node-inspector": "x.x.x",
-    "nodebug": "x.x.x",
     "mocha": "x.x.x",
     "should": "x.x.x"
   },
