--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
     "url": "https://github.com/virtual-world-framework/vwf.git"
   },
   "dependencies": {
-    "crypto": "0.0.3",
-    "socket.io": "1.7.3",
-    "socket.io-client": "^1.7.3",
-    "ws": "~2.1.0",
-    "async": "~2.1.5",
-    "mime": "1.3.4",
-    "js-yaml": "3.8.1",
+    "crypto": "0.0.x",
+    "socket.io": "1.7.x",
+    "socket.io-client": "^1.7.x",
+    "async": "2.1.x",
+    "mime": "1.3.x",
+    "js-yaml": "3.8.x",
     "optimist": "0.6.x",
-    "fs-extra": "2.0.0"
+    "fs-extra": "2.0.x"
   },
   "devDependencies": {
     "mocha": "x.x.x",
