--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/virtual-world-framework/vwf.git"
   },
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "amdefine": "^1.0.1",
     "amqplib": "^0.5.1",
     "async": "0.2.x",
@@ -41,6 +42,7 @@
     "lodash": "^3.10.1",
     "mime": "1.2.x",
     "mkdirp": "^0.5.1",
+    "multer": "^1.3.0",
     "optimist": "0.6.x",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
