Update mapPosition when user drags a unit
This fixes the bug where a unit would pop back to its original position on zoom, and should obviate a host of workarounds that we had previously implemented.

--- a/support/proxy/vwf.example.com/mil-sym/unitIcon.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitIcon.vwf.yaml
@@ -29,6 +29,10 @@ properties:
   transformsEnabled: "position"
   zIndex: 20
 
+methods:
+  handleRender:
+  updateIcon:
+
 events:
 
   imageChanged:
@@ -36,10 +40,6 @@ events:
   iconSizeChanged:
 
   symbolCenterChanged:
-
-methods:
-
-  handleRender:
 
 scripts:
 - source: "unitIcon.js"
