--- a/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/unitGroup.vwf.yaml
@@ -10,14 +10,7 @@ properties:
     set: |
       if ( value !== undefined ) {
         this.mapPosition = value;
-        if ( this.icon && this.icon.symbolCenter ) {
-          this.position = {
-            "x": ( this.mapPosition.absolute ? this.mapPosition.x : this.mapPosition.x - this.icon.symbolCenter.x ),
-            "y": ( this.mapPosition.absolute ? this.mapPosition.y : this.mapPosition.y - this.icon.symbolCenter.y )
-          };
-        } else {
-          this.position = { "x": value.x, "y": value.y };
-        } 
+        this.setPositionFromMapPosition();
       }
     value: { "x": 0, "y": 0 }
 
@@ -44,11 +37,11 @@ properties:
   mirrorAll: false
 methods:
   updateThreatShape:
-
   handleRender:
-
+  setPositionFromMapPosition:
+  setMapPositionFromPosition:
 events:
   threatShapeChanged:
-  
+  unitGroupDragged:
 scripts:
 - source: "unitGroup.js"
