--- a/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
@@ -1,7 +1,6 @@
 --- 
 extends: http://vwf.example.com/kinetic/image.vwf
 properties:
-  supportMouseAndTouchEvents: true
   affiliation:
   fullName:
   tagName:
@@ -9,12 +8,9 @@ properties:
   symbolID:
   symbolType:
   controlPts: []
-  visible: 'inherit'
-  listening: 'inherit'
-  draggable: true
-  dragDistance: 4
-  dragToTop: true
+  scaleOnLoad: false
   disableScaleAndRotationForSpeed: false
+  isDraggable: false
 
   image:
     set: |
