Add tactical graphic-specific modifiers.

--- a/support/proxy/vwf.example.com/mil-sym/modifier.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/modifier.vwf.yaml
@@ -28,6 +28,11 @@ properties:
   uniqueDesignation2:
   speed:
   validModifiers:
+  distance:
+  azimuth:
+  length:
+  width:
+  angle:
 scripts:
 - |
   this.initialize = function() {
