Store graphic bounds as its own property, separate from Konva Image width and height.
mil-sym uses the bounds to produce an image.  The image dimensions don't always conform to the
extents defined in the bounds because of allowances for glyphs and modifiers, but needs to be saved
to produce a consistently-image regardless of modifiers.

--- a/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
@@ -11,6 +11,7 @@ properties:
   scaleOnLoad: false
   disableScaleAndRotationForSpeed: false
   isDraggable: false
+  bounds: []
 
   image:
     set: |
