Initial stab at setting a hitGraphFromCache property & processing when an applicable property changes.

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -37,6 +37,7 @@ properties:
   supportMouseAndTouchEvents: false
   hasMouseAndTouchEvents: false
   attributes:
+  hitGraphFromCache: false
 methods:
   toggleVisibility:
   toggleListening:
