--- a/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
@@ -12,6 +12,7 @@ properties:
   disableScaleAndRotationForSpeed: false
   isDraggable: false
   bounds: []
+  hitGraphFromCache: true
 
   image:
     set: |
