Eliminate unnecessary renders during mission graphic creation

--- a/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
@@ -21,5 +21,11 @@ properties:
         this.imageChanged( value );
       }
 
+methods:
+  render:
+
 events:
   imageChanged:
+
+scripts:
+- source: "missionGfx.js"
