Add a minimum threshold property for caching images to counter degraded cached images at small scales.

--- a/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
+++ b/support/proxy/vwf.example.com/kinetic/node.vwf.yaml
@@ -38,6 +38,7 @@ properties:
   hasMouseAndTouchEvents: false
   attributes:
   hitGraphFromCache: false
+  minCachePixelSizeThreshold: 0
 methods:
   toggleVisibility:
   toggleListening:
