--- a/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
+++ b/support/proxy/vwf.example.com/mil-sym/missionGfx.vwf.yaml
@@ -13,6 +13,7 @@ properties:
   isDraggable: false
   bounds: []
   hitGraphFromCache: true
+  minCachePixelSizeThreshold: 60
 
   image:
     set: |
